--- a/css/main.css
+++ b/css/main.css
@@ -24,3 +24,69 @@ header {
     display: block;
     margin: 0 auto; 
 }
+
+#character_nav {
+    background-color: #000000;
+    background-image: url('../images/characters_art_mas_mob_01.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: multiply;
+}
+
+.characters {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.characters li {
+    height: 220px;
+    margin: 10px 8px;
+    text-align: left;
+    cursor: pointer;
+    box-shadow: 0 155px 0 rgb(132, 0, 255) inset;
+    transition: box-shadow .2s ease;
+}
+
+.characters li a {
+    text-decoration: none;
+}
+
+.characters li:hover {
+    box-shadow: 0 205px 0 rgb(241, 6, 249) inset;
+}
+
+.characters li h5 {
+    color: #fff;
+    padding: 12px 8px;
+}
+
+article, #instructions {
+    padding: 20px;
+}
+
+article h3, #instructions h3 {
+    font-size: 32px;
+    text-align: center;
+    margin-bottom: 14px;
+}
+
+article p, #instructions p {
+    font-size: 18px;
+    text-align: center;
+}
+.sprite {
+    width: 150px;
+    height: 150px;
+}
+
+#Silor2 {background-position: -150px 0;}
+#Silor3 {background-position: -300px 0;}
+#Silor4 {background-position: -450px 0;}
+#Silor5 {background-position: -600px 0;}
+#Silor6 {background-position: -750px 0;}
+
+#Silor1:hover, #Silor2:hover, #Silor3:hover, #Silor4:hover, #Silor5:hover, #Silor6:hover {
+    background-position-y: -150px;
+}
