Add the photo in the lightbox
In this commit, added the images in the lightbox.

--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,7 @@ article p, #instructions p {
 .sprite {
     width: 150px;
     height: 150px;
+    background-image: url('../images/SaliorMoonSprites\ copy.jpg');
 }
 
 #Silor2 {background-position: -150px 0;}
@@ -90,4 +91,72 @@ article p, #instructions p {
 
 #Silor1:hover, #Silor2:hover, #Silor3:hover, #Silor4:hover, #Silor5:hover, #Silor6:hover {
     background-position-y: -150px;
+}
+
+
+footer {
+    text-align: center;
+    padding: 20px 0;
+}
+
+.sticky_footer {
+    height: 80px;
+    background-color: rgb(40,37,37);
+    position: sticky;
+    top: 100%;
+}
+
+.lightbox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0, 0.85);
+    background-image: url('../images/Cap_LB_Bg.png');
+    background-repeat: no-repeat;
+    background-size: 55vh;
+    background-position: 40px bottom;
+    display: none;
+}
+
+#lightbox2 {
+    background-image: url('../images/Thor_LB_Bg.png');
+}
+
+.lightbox_close {
+    position: absolute;
+    top: 20px;
+    right: 5%;
+
+    color: white;
+    font-size: 36px;
+
+    text-decoration: none;
+    font-weight: bolder;
+
+    transition: all .5s ease-in-out;
+}
+
+.lightbox_close:hover {
+    opacity: 0.5;
+    color: red;
+}
+
+.lightbox article {
+    width: 55%;
+    margin-left: 40%;
+    padding-top: 50px;
+}
+
+.lb_text, .lb_heading {
+    text-align: left;
+}
+
+.lb_text {
+    line-height: 26px;
+}
+
+.lightbox:target {
+    display: block;
 }
