--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ body {
 header {
     background-color:rgb(132, 0, 255);
     padding: 10px 0;
+    box-shadow: 3px 3px 5px rgba(0,0,0,.3);
 }
 
 #main-logo {
@@ -35,7 +36,8 @@ header {
 }
 
 #character_nav {
-    background-color: #000000;
+    background-color: #0000008f;
+    background-image: url('../images/307700138_615144353457377_9006175472922847272_n.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: multiply;
@@ -101,7 +103,7 @@ footer {
 
 .sticky_footer {
     height: 80px;
-    background-color: rgb(40,37,37);
+    background-color: rgb(0, 0, 0);
     position: sticky;
     top: 100%;
 }
