Add information inside index.html
In this commit, added information inside each of lightbox.

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ header {
 
 #character_nav {
     background-color: #000000;
+    background-image: url('../images/SaliorMoonSprites\ copy.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: multiply;
